# any2ppt

./: AGENTS.md  README.md
.agents/plugins/: marketplace.json
docs/: any2ppt-plugin-vision.md  deckit-plugin-vision.md  development-layout.md  install-and-use.md  pptx-native-experiment.md  production-mode-insights.md  v1-roadmap.md  v1-smoke-report.md  v1-status.md
plugins/any2ppt/.codex-plugin/: plugin.json
plugins/any2ppt/assets/sample-decks/sanmiao-victory-day/: notes.md
plugins/any2ppt/assets/sample-decks/sanmiao-victory-day/prompts/: 00_cover.md  (+1 more)
plugins/any2ppt/references/: budget-modes.md  critique-checklist.md  slide-archetypes.md  workflow.md
plugins/any2ppt/skills/deck-producer/: SKILL.md
plugins/any2ppt/skills/document-ingestor/: SKILL.md
plugins/any2ppt/skills/slide-storyboarder/: SKILL.md
plugins/any2ppt/skills/story-architect/: SKILL.md
plugins/any2ppt/skills/visual-director/: SKILL.md
plugins/deckit/.codex-plugin/: plugin.json
plugins/deckit/assets/sample-decks/sanmiao-victory-day/: brief.md  storyboard.md
plugins/deckit/references/: budget-modes.md  critique-checklist.md  slide-archetypes.md  workflow.md
plugins/deckit/skills/deck-producer/: SKILL.md
plugins/deckit/skills/document-ingestor/: SKILL.md
plugins/deckit/skills/slide-storyboarder/: SKILL.md
plugins/deckit/skills/story-architect/: SKILL.md
plugins/deckit/skills/visual-director/: SKILL.md
tools/: pyproject.toml
tools/src/any2ppt_dev/: cli.py  ingest.py  pptx_draft.py
tools/src/deckit_dev/: __init__.py  cli.py  ingest.py
tools/tests/: test_preview_layout.py
(+2 files in other folders)
