[project]
name = "any2ppt-dev-tools"
version = "0.1.0"
description = "Development utilities for the Any2PPT Codex plugin."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.2",
  "python-pptx>=1.0.2",
  "pypdf>=5.0.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "markdownify>=0.13.0",
]

[project.scripts]
any2ppt-dev = "any2ppt_dev.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/any2ppt_dev"]
